--- a/Pict/app/src/main/res/values/strings.xml
+++ b/Pict/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="list_kategori">
+        <item>Sayur Hijau</item>
+        <item>Sayur Merah</item>
+        <item>Sayur Kuning</item>
+    </string-array>
 </resources>
